--- a/web/themes/custom/leap/css/style.css
+++ b/web/themes/custom/leap/css/style.css
@@ -2220,7 +2220,7 @@ table p {
   margin-bottom: 20px;
 }
 .block-media-inline .featured-wrapper .featured-content .featured-body {
-  color: #6f6f6f;
+  color: #505857;
 }
 .block-media-inline .featured-wrapper .action-link {
   justify-content: flex-start;
