--- a/web/themes/custom/leap/sass/_blocks.scss
+++ b/web/themes/custom/leap/sass/_blocks.scss
@@ -225,7 +225,7 @@
       }
 
       .featured-body {
-        color: $lightGray2;
+        color: $purple;
       }
     }
 
